Fix sizing on mobile and later conditions

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -110,7 +110,7 @@ footer a {
 }
 
 @media screen and (max-width: 700px) {
-  h1 {
+  h1, h2 {
     font-size: 40px;
   }
   #outcome {
